# MoshNet

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/src/core/: app.py  settings.py
backend/src/domains/domain/: entities.py
backend/src/domains/domain/interfaces/: service.py
backend/src/domains/infrastructure/services/: domain_analyze.py  google_safebrowsing.py  request.py  safebrowsing.py  site_parser.py  virus_total.py  whois.py  yandex_safebrowsing.py
backend/src/domains/presentation/: api.py  dependencies.py
backend/src/domains/usecase/: domain_analyze.py
backend/tests/integration/: domain.json  test_check_domain.py
backend/tests/unit/: test_domain_entity.py  test_safebrowsing.py  test_site_parser.py  test_static_media.py  test_virus_total.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/components/: AboutSiteCard.tsx  AlertsPanel.tsx  AnalyzeForm.tsx  AppHeader.tsx  DomainInfoCard.tsx  SiteInfoCard.tsx  StatusCard.tsx
frontend/src/components/common/: InfoBlock.tsx  InfoRow.tsx  Metric.tsx  StatusIcon.tsx
frontend/src/constants/: analyze.ts
frontend/src/pages/: DomainAnalyzerPage.tsx
frontend/src/services/: analyze.ts
frontend/src/types/: analyze.ts
frontend/src/utils/: domain.ts  format.ts  safety.ts
